*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 0.5.1 ===
* Updated code to match lltl library headers.
* Better integration with system::follow_url() routine.
* Added automatic style creation from XML schema.
* Added simple language configuration support by the tk::Schema class.
* Fixed allocation for invisible widgets inside the tk::Grid container.
- Add custom mouse pointer for fraction actions.

=== 0.5.0 ===
* Initial release.